kubernetes/apps/ingress-nginx/base/deployment-default-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-website
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: website-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: website-content
        configMap:
          name: web-content
---
apiVersion: v1
kind: Service
metadata:
  name: default-service
  namespace: ingress-nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
