kubernetes/apps/ingress-nginx/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: "*.lab.winwithcherwin.com"
    external-dns.alpha.kubernetes.io/target: 138.199.163.162
spec:
  ingressClassName: nginx
  tls:
    - secretName: wildcard-tls-lab-winwithcherwin-com
      hosts:
        - "*.lab.winwithcherwin.com"
  rules:
    - host: oblivion.lab.winwithcherwin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-nginx-controller
                port:
                  number: 80
